--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,257 +1,235 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <title>OGC PAWN | ID:J8A0A1</title>
-
-    <meta name="description" content="PAWN CONFIGURATION OPC">
-    <meta name="author" content="LAV0Y">
-
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
-
-  </head>
-  <body>
-
-    <div class="container-fluid">
-	<div class="row">
-		<div class="col-md-12">
-			<div class="row">
-				<div class="col-md-12">
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-6">
-					<h3>
-						Pawn Configuration: OGC
-					</h3>
-					<blockquote>
-						<p>
-							PAWN ID: J8A0A1
-						</p>
-					</blockquote>
-				</div>
-				<div class="col-md-6">
-					<h3>
-						 
-					</h3>
-						<div class="row">
-							<div class="col-md-8">
-								 
-								<button type="button" class="btn btn-block btn-success">
-									Push to Overwatch | IP: 192.168.202.100
-								</button>
-							</div>
-							<div class="col-md-1">
-							</div>
-							<div class="col-md-3">
-								<button type="button" class="btn btn-block btn-primary">
-									EDIT OPC IP
-								</button>
-							</div>
-						</div>
-				</div>
-			</div> 
-			<button type="button" class="btn btn-block btn-warning">
-				CREATE NEW RELAY FUNCTION
-			</button>
-			<table class="table table-responsive">
-				<thead>
-					<tr>
-						<th>
-							UUID
-						</th>
-						<th>
-							NAME
-						</th>
-						<th>
-							BCM
-						</th>
-						<th>
-							MODE
-						</th>
-						<th>
-							RELAY
-						</th>
-						<th>
-							STATUS
-						</th>
-						<th>
-							TOGGLE
-						</th>
-						<th>
-							TOOLS
-						</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr>
-						<td>
-							d6b91725-b5e8-477f-b5ae-43ef2de0832e
-						</td>
-						<td>
-							Light R
-						</td>
-						<td>
-							2
-						</td>
-						<td>
-							OUT
-						</td>
-						<td>
-							1
-						</td>
-						<td>
-							ON
-						</td>
-						<td>
-							<button type="button" class="btn btn-block btn-primary">
-								TOGGLE
-							</button>
-							<button type="button" class="btn btn-block btn-success">
-								ON
-							</button>
-							<button type="button" class="btn btn-block btn-danger">
-								OFF
-							</button>
-						</td>
-						<td>
-							<button type="button" class="btn btn-block btn-primary">
-								EDIT
-							</button>
-							<button type="button" class="btn btn-block btn-danger">
-								DELETE
-							</button>
-						</td>
-					</tr>
-					<tr class="active">
-						<td>
-							d6b91725-b5e8-477f-b5ae-43ef2de0832e
-						</td>
-						<td>
-							Light G
-						</td>
-						<td>
-							5
-						</td>
-						<td>
-							OUT
-						</td>
-						<td>
-							2
-						</td>
-						<td>
-							ON
-						</td>
-						<td>
-							<button type="button" class="btn btn-block btn-primary">
-								TOGGLE
-							</button>
-							<button type="button" class="btn btn-block btn-success">
-								ON
-							</button>
-							<button type="button" class="btn btn-block btn-danger">
-								OFF
-							</button>
-						</td>
-						<td>
-							<button type="button" class="btn btn-block btn-primary">
-								EDIT
-							</button>
-							<button type="button" class="btn btn-block btn-danger">
-								DELETE
-							</button>
-						</td>
-					</tr>
-					<tr class="success">
-						<td>
-							d6b91725-b5e8-477f-b5ae-43ef2de0832e
-						</td>
-						<td>
-							Light B
-						</td>
-						<td>
-							8
-						</td>
-						<td>
-							OUT
-						</td>
-						<td>
-							3
-						</td>
-						<td>
-							OFF
-						</td>
-						<td>
-							<button type="button" class="btn btn-block btn-primary">
-								TOGGLE
-							</button>
-							<button type="button" class="btn btn-block btn-success">
-								ON
-							</button>
-							<button type="button" class="btn btn-block btn-danger">
-								OFF
-							</button>
-						</td>
-						<td>
-							<button type="button" class="btn btn-block btn-primary">
-								EDIT
-							</button>
-							<button type="button" class="btn btn-block btn-danger">
-								DELETE
-							</button>
-						</td>
-					</tr>
-					<tr class="danger">
-						<td>
-							d6b91725-b5e8-477f-b5ae-43ef2de0832e
-						</td>
-						<td>
-							Light ALL
-						</td>
-						<td>
-							11
-						</td>
-						<td>
-							OUT
-						</td>
-						<td>
-							4
-						</td>
-						<td>
-							OFF
-						</td>
-						<td>
-							<button type="button" class="btn btn-block btn-primary">
-								TOGGLE
-							</button>
-							<button type="button" class="btn btn-block btn-success">
-								ON
-							</button>
-							<button type="button" class="btn btn-block btn-danger">
-								OFF
-							</button>
-						</td>
-						<td>
-							<button type="button" class="btn btn-block btn-primary">
-								EDIT
-							</button>
-							<button type="button" class="btn btn-block btn-danger">
-								DELETE
-							</button>
-						</td>
-					</tr>
-				</tbody>
-			</table>
-		</div>
-	</div>
+<% include ../partials/head %>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="row">
+                <div class="col-md-12">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <h3>
+                    Pawn Configuration: OGC
+                    </h3>
+                    <blockquote>
+                        <p>
+                            PAWN ID: J8A0A1
+                        </p>
+                    </blockquote>
+                </div>
+                <div class="col-md-6">
+                    <h3>
+                    
+                    </h3>
+                    <div class="row">
+                        <div class="col-md-8">
+                            
+                            <button type="button" class="btn btn-block btn-success">
+                            Push to Overwatch | IP: 192.168.202.100
+                            </button>
+                        </div>
+                        <div class="col-md-1">
+                        </div>
+                        <div class="col-md-3">
+                            <button type="button" class="btn btn-block btn-primary">
+                            EDIT OPC IP
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <button type="button" class="btn btn-block btn-warning">
+            CREATE NEW RELAY FUNCTION
+            </button>
+            <table class="table table-responsive">
+                <thead>
+                    <tr>
+                        <th>
+                            UUID
+                        </th>
+                        <th>
+                            NAME
+                        </th>
+                        <th>
+                            BCM
+                        </th>
+                        <th>
+                            MODE
+                        </th>
+                        <th>
+                            RELAY
+                        </th>
+                        <th>
+                            STATUS
+                        </th>
+                        <th>
+                            TOGGLE
+                        </th>
+                        <th>
+                            TOOLS
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>
+                            d6b91725-b5e8-477f-b5ae-43ef2de0832e
+                        </td>
+                        <td>
+                            Light R
+                        </td>
+                        <td>
+                            2
+                        </td>
+                        <td>
+                            OUT
+                        </td>
+                        <td>
+                            1
+                        </td>
+                        <td>
+                            ON
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-block btn-primary">
+                            TOGGLE
+                            </button>
+                            <button type="button" class="btn btn-block btn-success">
+                            ON
+                            </button>
+                            <button type="button" class="btn btn-block btn-danger">
+                            OFF
+                            </button>
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-block btn-primary">
+                            EDIT
+                            </button>
+                            <button type="button" class="btn btn-block btn-danger">
+                            DELETE
+                            </button>
+                        </td>
+                    </tr>
+                    <tr class="active">
+                        <td>
+                            d6b91725-b5e8-477f-b5ae-43ef2de0832e
+                        </td>
+                        <td>
+                            Light G
+                        </td>
+                        <td>
+                            5
+                        </td>
+                        <td>
+                            OUT
+                        </td>
+                        <td>
+                            2
+                        </td>
+                        <td>
+                            ON
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-block btn-primary">
+                            TOGGLE
+                            </button>
+                            <button type="button" class="btn btn-block btn-success">
+                            ON
+                            </button>
+                            <button type="button" class="btn btn-block btn-danger">
+                            OFF
+                            </button>
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-block btn-primary">
+                            EDIT
+                            </button>
+                            <button type="button" class="btn btn-block btn-danger">
+                            DELETE
+                            </button>
+                        </td>
+                    </tr>
+                    <tr class="success">
+                        <td>
+                            d6b91725-b5e8-477f-b5ae-43ef2de0832e
+                        </td>
+                        <td>
+                            Light B
+                        </td>
+                        <td>
+                            8
+                        </td>
+                        <td>
+                            OUT
+                        </td>
+                        <td>
+                            3
+                        </td>
+                        <td>
+                            OFF
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-block btn-primary">
+                            TOGGLE
+                            </button>
+                            <button type="button" class="btn btn-block btn-success">
+                            ON
+                            </button>
+                            <button type="button" class="btn btn-block btn-danger">
+                            OFF
+                            </button>
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-block btn-primary">
+                            EDIT
+                            </button>
+                            <button type="button" class="btn btn-block btn-danger">
+                            DELETE
+                            </button>
+                        </td>
+                    </tr>
+                    <tr class="danger">
+                        <td>
+                            d6b91725-b5e8-477f-b5ae-43ef2de0832e
+                        </td>
+                        <td>
+                            Light ALL
+                        </td>
+                        <td>
+                            11
+                        </td>
+                        <td>
+                            OUT
+                        </td>
+                        <td>
+                            4
+                        </td>
+                        <td>
+                            OFF
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-block btn-primary">
+                            TOGGLE
+                            </button>
+                            <button type="button" class="btn btn-block btn-success">
+                            ON
+                            </button>
+                            <button type="button" class="btn btn-block btn-danger">
+                            OFF
+                            </button>
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-block btn-primary">
+                            EDIT
+                            </button>
+                            <button type="button" class="btn btn-block btn-danger">
+                            DELETE
+                            </button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
 </div>
-
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/scripts.js"></script>
-  </body>
-</html>
+<% include ../partials/footer %>
