Revised Header in Overwatch and Pawn - ERROR

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -23,15 +23,17 @@
 				<div class="col-md-12">
 				</div>
 			</div>
-			<div class="col-md-12">
-			<div class="page-header">
-				<h1>
-					Pawn Configuration: OGC
-					<div>
-						<h4>PAWN ID: J8A0A1</h4>
-					</div>
-				</h1>
-			</div>
+			<div class="row">
+				<div class="col-md-6">
+					<h3>
+						Pawn Configuration: OGC
+					</h3>
+					<blockquote>
+						<p>
+							PAWN ID: J8A0A1
+						</p>
+					</blockquote>
+				</div>
 				<div class="col-md-6">
 					<h3>
 						 
