--- a/views/pages/overwatch.ejs
+++ b/views/pages/overwatch.ejs
@@ -23,15 +23,17 @@
 				<div class="col-md-12">
 				</div>
 			</div>
-			<div class="col-md-12">
-			<div class="page-header">
-				<h1>
-					Overwatch: OGC
-					<div>
-						<h4>Pawns Online: XX</h4>
-					</div>
-				</h1>
-			</div>
+			<div class="row">
+				<div class="col-md-6">
+					<h3>
+						Overwatch: OGC
+					</h3>
+					<blockquote>
+						<p>
+							Pawns Online: XX
+						</p>
+					</blockquote>
+				</div>
 				<div class="col-md-6">
 					<h3>
 						 
