--- a/views/pages/overwatch.ejs
+++ b/views/pages/overwatch.ejs
@@ -1,22 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <title>OGC OVERWATCH | ID:ADMIN</title>
-
-    <meta name="description" content="OVERWATCH OPC">
-    <meta name="author" content="LAV0Y">
-
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
-
-  </head>
-  <body>
-
-    <div class="container-fluid">
+<% include ../partials/head %>
+<div class="container-fluid">
 	<div class="row">
 		<div class="col-md-12">
 			<div class="row">
@@ -26,7 +9,7 @@
 			<div class="row">
 				<div class="col-md-6">
 					<h3>
-						Overwatch: OGC
+					Overwatch: OGC
 					</h3>
 					<blockquote>
 						<p>
@@ -36,33 +19,33 @@
 				</div>
 				<div class="col-md-6">
 					<h3>
-						 
+					
 					</h3>
-						<div class="row">
-							<div class="col-md-12">
-								 
-								<button type="button" class="btn btn-block btn-success">
-									ADOPT A PAWN
-								</button>
-								<button type="button" class="btn btn-block btn-warning">
-									PAWN ID: XX | IP: XX
-								</button>
-								<button type="button" class="btn btn-block btn-warning">
-									PAWN ID: XX | IP: XX
-								</button>
-								<button type="button" class="btn btn-block btn-warning">
-									PAWN ID: XX | IP: XX
-								</button>
-								<button type="button" class="btn btn-block btn-warning">
-									PAWN ID: XX | IP: XX
-								</button>
-								<button type="button" class="btn btn-block btn-warning">
-									PAWN ID: XX | IP: XX
-								</button>
-							</div>
+					<div class="row">
+						<div class="col-md-12">
+							
+							<button type="button" class="btn btn-block btn-success">
+							ADOPT A PAWN
+							</button>
+							<button type="button" class="btn btn-block btn-warning">
+							PAWN ID: XX | IP: XX
+							</button>
+							<button type="button" class="btn btn-block btn-warning">
+							PAWN ID: XX | IP: XX
+							</button>
+							<button type="button" class="btn btn-block btn-warning">
+							PAWN ID: XX | IP: XX
+							</button>
+							<button type="button" class="btn btn-block btn-warning">
+							PAWN ID: XX | IP: XX
+							</button>
+							<button type="button" class="btn btn-block btn-warning">
+							PAWN ID: XX | IP: XX
+							</button>
 						</div>
+					</div>
 				</div>
-			</div> 
+			</div>
 			<table class="table table-responsive">
 				<thead>
 					<tr>
@@ -90,21 +73,21 @@
 						</td>
 						<td>
 							<button type="button" class="btn btn-block btn-primary">
-								TOGGLE
+							TOGGLE
 							</button>
 							<button type="button" class="btn btn-block btn-success">
-								ON
+							ON
 							</button>
 							<button type="button" class="btn btn-block btn-danger">
-								OFF
+							OFF
 							</button>
 						</td>
 						<td>
 							<button type="button" class="btn btn-block btn-primary">
-								EDIT
+							EDIT
 							</button>
 							<button type="button" class="btn btn-block btn-danger">
-								DELETE
+							DELETE
 							</button>
 						</td>
 					</tr>
@@ -113,9 +96,4 @@
 		</div>
 	</div>
 </div>
-
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/scripts.js"></script>
-  </body>
-</html>
+<% include ../partials/footer %>
