--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>OGC PAWN</title>
+    <title>OGC</title>
     <meta name="description" content="PAWN CONFIGURATION OPC">
     <meta name="author" content="LAV0Y">
     <link href="/public/css/bootstrap.min.css" rel="stylesheet">
