--- a/views/pages/pawn.ejs
+++ b/views/pages/pawn.ejs
@@ -97,14 +97,14 @@
                             <input class="btn btn btn-info" name="toggle" id="toggle" value="toggle" type="submit" />
                             <script>
                             $('#toggle').click(function() {
-                            $.post('/gpio/toggle', { uuid: "1" });
+                            $.post('/gpio/toggle', { bcm: "<%= rows[i].bcm %>" });
                             });
                             </script>
                            
                             <input class="btn btn btn-info" name="on" id="on" value="on" type="submit" />
                             <script>
                             $('#on').click(function() {
-                            $.post('/gpio/on', { uuid: "1" });
+                            $.post('/gpio/on', { bcm: "<%= rows[i].bcm %>" });
                             });
                             </script>
 
@@ -112,7 +112,7 @@
                             <input class="btn btn btn-info" name="off" id="off" value="off" type="submit" />
                             <script>
                             $('#off').click(function() {
-                            $.post('/gpio/off', { uuid: "1" });
+                            $.post('/gpio/off', { bcm: "<%= rows[i].bcm %>" });
                             });
                             </script>
                         </td>
