Simple GUI UPDATE FOR AARON!

--- a/views/pages/pawn.ejs
+++ b/views/pages/pawn.ejs
@@ -94,14 +94,14 @@
                         </td>
                         <td>
                            
-                            <input class="btn btn btn-info" name="<%= rows[i].bcm %>-toggle" id="<%= rows[i].bcm %>-toggle" value="<%= rows[i].bcm %>-toggle" type="submit" />
+                            <input class="btn btn-block btn-info" name="<%= rows[i].bcm %>-toggle" id="<%= rows[i].bcm %>-toggle" value="TOGGLE" type="submit" />
                             <script>
                             $('#<%= rows[i].bcm %>-toggle').click(function() {
                             $.post('/gpio/toggle', { bcm: "<%= rows[i].bcm %>" });
                             });
                             </script>
                            
-                            <input class="btn btn btn-info" name="<%= rows[i].bcm %>-on" id="<%= rows[i].bcm %>-on" value="<%= rows[i].bcm %>-on" type="submit" />
+                            <input class="btn btn-block btn-info" name="<%= rows[i].bcm %>-on" id="<%= rows[i].bcm %>-on" value="ON" type="submit" />
                             <script>
                             $('#<%= rows[i].bcm %>-on').click(function() {
                             $.post('/gpio/on', { bcm: "<%= rows[i].bcm %>" });
@@ -109,7 +109,7 @@
                             </script>
 
 
-                            <input class="btn btn btn-info" name="<%= rows[i].bcm %>-off" id="<%= rows[i].bcm %>-off" value="<%= rows[i].bcm %>-off" type="submit" />
+                            <input class="btn btn-block btn-info" name="<%= rows[i].bcm %>-off" id="<%= rows[i].bcm %>-off" value="OFF" type="submit" />
                             <script>
                             $('#<%= rows[i].bcm %>-off').click(function() {
                             $.post('/gpio/off', { bcm: "<%= rows[i].bcm %>" });
